<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grădina Botanică Iași</string>
    <string name="qr_title">QR Scanner</string>
    <string name="plants_title">Plante</string>
    <string name="plant_information_title">Plantă</string>
    <string name="settings_title">Setări</string>
    <string name="title">Titlu</string>
    <string name="plant_image_description">O poză a plantei</string>
    <string name="subtitle">Subtitlu</string>
    <string name="const_author">Autor:</string>
    <string name="author_name">Numele Autorului</string>
    <string name="plant_description_list_item_desc">Descriere</string>
    <string name="plant_description_list_item_title">Titlu</string>
    <string name="const_origin">Origine: </string>
    <string name="origin">Origine</string>
    <string name="description">Descriere</string>
    <string name="const_description">Descriere: </string>
    <string name="const_natural_area">Arie naturală: </string>
    <string name="location_and_size">Location and size</string>
    <string name="const_location_and_size">Amplasament și suprafață: </string>
    <string name="natural_area">Arie naturală</string>
    <string name="plant_info_about_const">Despre </string>
    <string name="icon_description">O mică poza a obiectului din listă.</string>
    <string name="plant_info_photo_description">O poză a plantei prezentate.</string>
    <string name="action_show_on_map">Vezi pe hartă</string>
    <string name="more_vert">⋮</string>
    <string name="action_hide">Ascunde</string>
    <string name="action_show">Nu mai ascunde</string>
    <string name="show_more">Arată mai mult…</string>
    <string name="show_less">Arată mai puțin…</string>
    <string name="similar_plants">Plante similare</string>
    <string name="plants_settings_title">Setări plante</string>
    <string name="maps_title">Hartă</string>
    <string name="games_title">Jocuri</string>
    <string name="game_one_title">Primul Joc</string>
    <string name="logo_description">Iasi Botanical Garden Logo</string>
    <string name="home_title">Acasă</string>
    <string name="logo_uaic_description">UAIC Logo</string>
    <string name="show_information_about">Arată informații despre:</string>
    <string name="user_title">Utilizator</string>
    <string name="caching">Caching:</string>
    <string name="caching_settings_title">Înlocuiește informațiile pentru orice este mai vechi de:</string>
    <string name="caching_ttl">cachingTTL</string>
    <string name="refresh_button_text">Apăsați aici pentru a reîncărca…</string>
    <string name="refresh_button_title">Nu mai există alte informații salvate local!</string>
    <string name="refresh_icon_description">Refresh icon</string>
    <string name="search_hint">Caută aici…</string>
    <string name="search_title">Caută</string>
    <string name="search_by">Caută după:</string>
    <string name="option_placeholder">Opțiune</string>
    <string name="sections_title">Secții</string>
    <string name="pick_sections">Secții:</string>
</resources>
